# mercury

./: README.md
src/bringup/config/: bringup.rviz
src/control_listener/: package.xml  setup.cfg  setup.py
src/control_listener/control_listener/: control_listener_node.py
src/control_listener/launch/: control_listener.launch.py
src/description/config/: controllers.yaml
src/description/urdf/: robot_base.xacro  robot_control.xacro  robot_sensors.xacro
src/logger/: package.xml  setup.cfg  setup.py
src/logger/logger/: logger_node.py
src/perception/launch/: perception.launch.py
src/perception/perception/: lane_costmap.py  lane_costmap_node.py
src/planning/config/: global_costmap.yaml  local_costmap.yaml  nav2_params.yaml
src/simulation/launch/: simulation.launch.py
src/simulation/worlds/: mercury.sdf
src/system_monitor/: package.xml  setup.py
src/system_monitor/launch/: dashboard.launch.py  monitoring_all.launch.py  system_monitor.launch.py
src/system_monitor/system_monitor/: monitoring_dashboard.py  system_monitor_node.py
src/watchdog/: package.xml  setup.py
src/watchdog/launch/: watchdog.launch.py
src/watchdog_monitor/: package.xml  setup.cfg  setup.py
src/watchdog_monitor/launch/: control_listener.launch.py  dashboard.launch.py  monitoring_all.launch.py  system_monitor.launch.py  watchdog.launch.py  waypoint_manager.launch.py
src/watchdog_monitor/watchdog_monitor/: watchdog_node.py  waypoint_detector_node.py
src/waypoint_manager/: package.xml  setup.cfg  setup.py
src/waypoint_manager/config/: waypoints.yaml
(+1 files in other folders)
