<package format="3">
  <name>logger</name>
  <version>0.0.0</version>
  <description>Logger node</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
